--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.13.0",
     "nodemon": "^1.19.0"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
   }
 }
