--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "nodemon": "^1.19.0"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
+    "express-async-handler": "^1.1.4",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.5.5"
   }
 }
