--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Workout Tracker",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js"
+    "start": "nodemon --ignore WorkoutTrackerWithReactJS/* --exec babel-node index.js"
   },
   "author": "David Malone",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "9.0.0",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^5.16.0",
+    "eslint": "5.12.0",
     "eslint-plugin-react": "^7.13.0",
     "nodemon": "^1.19.0"
   },
